[sh4] Some calls don't match sh4 ABI. https://bugs.webkit.org/show_bug.cgi?id=122863

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-10-15
Reviewed by Michael Saboff.

* dfg/DFGSpeculativeJIT.h:
(JSC::DFG::SpeculativeJIT::callOperation):
* jit/CCallHelpers.h:
(JSC::CCallHelpers::setupArgumentsWithExecState):
* jit/JITInlines.h:
(JSC::JIT::callOperation):

Canonical link: https://commits.webkit.org/140940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157475 268f45cc-cd09-0410-ab3c-d52691b4dbfc